Use multi block update packets where possible (#317)
* feat: use multi block update packets where possible

* fix: disable Orebfuscator if ProtocolLib is disabled

* chore: update issue template

* chore: update issue template

* chore: update issue template

* chore: remove reference to google/guava

* chore: downgrade to java 11

* fix: 1.18 default config

* chore: improve sendBlockUpdates

* chore: update README

* test: use jupiter api